# f1cli

./: Cargo.toml  README.md
src/: cli.rs  main.rs  utils.rs
src/commands/: driver.rs  mod.rs  session.rs
