[package]
name = "f1cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.5", features = ["derive"] }
chrono = "^0.4"
reqwest = { version = "^0.12", features = ["blocking", "json"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
prettytable-rs = "^0.10"
